force-app/main/default/objects/Discrepancy__c/fields/AuditID__c.field-meta.xml
<CustomField>
    <fullName>AuditID__c</fullName>
    <label>Audit ID</label>
    <referenceTo>Audit__c</referenceTo>
    <relationshipLabel>DISCREPANCY</relationshipLabel>
    <relationshipName>Discrepancy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>