force-app/main/default/objects/Discrepancy__c/fields/CargoID__c.field-meta.xml
<CustomField>
    <fullName>CargoID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo ID</label>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>AUDIT DISCREPANCY</relationshipLabel>
    <relationshipName>Discrepancy</relationshipName>
    <type>Lookup</type>
</CustomField>