force-app/main/default/objects/Discrepancy__c/fields/CargoTroubleType__c.field-meta.xml
<CustomField>
    <fullName>CargoTroubleType__c</fullName>
    <label>Cargo Trouble Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoOSDType</valueSetName>
    </valueSet>
</CustomField>