force-app/main/default/objects/Discrepancy__c/fields/DiscrepancyAdjustType__c.field-meta.xml
<CustomField>
    <fullName>DiscrepancyAdjustType__c</fullName>
    <label>Discrepancy Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DiscrepancyAdjustType</valueSetName>
    </valueSet>
</CustomField>