force-app/main/default/objects/Discrepancy__c/fields/DiscrepancyType_del__c.field-meta.xml
<CustomField>
    <fullName>DiscrepancyType_del__c</fullName>
    <label>Discrepancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoOSDType</valueSetName>
    </valueSet>
</CustomField>