force-app/main/default/objects/Discrepancy__c/recordTypes/QualityDiscrepancy.recordType-meta.xml
<RecordType>
    <fullName>QualityDiscrepancy</fullName>
    <active>true</active>
    <description>Discrepancy on quality such as damaged, wet, or expired.</description>
    <label>Quality Discrepancy</label>
</RecordType>