force-app/main/default/objects/Discrepancy__c/recordTypes/QuantityDiscrepancy.recordType-meta.xml
<RecordType>
    <fullName>QuantityDiscrepancy</fullName>
    <active>true</active>
    <description>Quantity is shortage or overage.</description>
    <label>Quantity Discrepancy</label>
</RecordType>