force-app/main/default/objects/Discrepancy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>AuditID__c</columns>
    <columns>CargoID__c</columns>
    <columns>DiscrepancyType_del__c</columns>
    <columns>CargoTroubleType__c</columns>
    <columns>DiscrepancyAdjustType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>